# microservices

./: README.md
.github/workflows/: AbfReade.yaml  CWT.yaml  FFT.yaml  FFT_CONVOLVE.yaml  FastWaveletTransform.yaml  FirstDifference.yaml  IFFT.yaml  MatReader.yaml  MovingAverage.yaml  RunningSum.yaml  SignalsAverage.yaml  WaveletHarr.yaml
Argo/: abf_reader.yaml  cwt.yaml  fft.yaml  fft_convolve.yaml  first_difference.yaml  ifft.yaml  mat_reader.yaml  moving_average.yaml  running_sum.yaml  signals_average.yaml  wavelet_transform.yaml  wavelethaar.yaml
CWT/: CMakeLists.txt  Dockerfile
CWT/Deployment/: AutoCWT.yaml  CWTBack.yaml  CWTVS.yaml
CWT/proto/: signal_CWT.proto
CWT/src/: server.cc
FFT_CONVOLVE/: CMakeLists.txt  Dockerfile  Dockerfile_arm
FFT_CONVOLVE/Deployment/: AutoFFTConvolve.yaml  FFTConvolveBack.yaml  FFTConvolveVS.yaml
FFT_CONVOLVE/proto/: signal_FFT_convolve.proto
FFT_CONVOLVE/src/: server.cc
FFT_EIGEN/: CMakeLists.txt  Dockerfile  Dockerfile_arm
FFT_EIGEN/Deployment/: AutoFFT.yaml  FFTBack.yaml  FFTVS.yaml
FFT_EIGEN/proto/: signal_FFT.proto
FFT_EIGEN/src/: server.cc
FastWaveletHaar/: CMakeLists.txt  Dockerfile  Dockerfile_arm
FastWaveletHaar/Deployment/: AutoFastwaveletHarr.yaml  FastWaveletHarrBack.yaml  FastWaveletHarrVS.yaml
FastWaveletHaar/proto/: signal_wavelet_harr.proto
FastWaveletHaar/src/: server.cc
FastWaveletTransform/: CMakeLists.txt  Dockerfile  Dockerfile_arm
FastWaveletTransform/Deployment/: AutoFastWaveletTransform.yaml  FastWaveletTransformBack.yaml  FastWaveletTransformVS.yaml
FirstDifference/: CMakeLists.txt  Dockerfile  Dockerfile_arm
FirstDifference/Deployment/: AutoFirstDifference.yaml  FirstDifferenceBack.yaml  FirstDifferenceVS.yaml
FirstDifference/proto/: signal_first_difference.proto
FirstDifference/src/: server.cc
IFFT/: CMakeLists.txt  Dockerfile  Dockerfile_arm
Moving_Average/: CMakeLists.txt  Dockerfile  Dockerfile_arm
Runing_sum/: CMakeLists.txt  Dockerfile  Dockerfile_arm
Signals_Average/: CMakeLists.txt  Dockerfile  Dockerfile_arm
abfReader/: ABFReaderClient.py  ABFReaderServer.py  Dockerfile  abf_service_pb2.py  abf_service_pb2_grpc.py  readme.md  requirements.txt
docs/: Doxyfile
grpc/: CMakeLists.txt
grpc/proto/: elproto.proto
grpc/src/: grpcserver.cc
istio-conf/: filter.yaml  gateway.yaml
matReader/: Dockerfile  MatReaderClient.py  MatReaderServer.py  mat_service_pb2.py  mat_service_pb2_grpc.py  plotResult.ipynb  readme.md  requirements.txt
server/: CMakeLists.txt
(+1102 files in other folders)
